# caipy

./: .gitignore  Auto models workbook.ipynb  CHANGELOG.md  CITATION.cff  LICENSE  PLS2.py  PLS2_modelling.py  PLS2_testing.py  README.md  Untitled.ipynb  apply_PLS2.py  apply_model.py  build_SuperCam_models.ipynb  calculate_sensitivity.py  iterative_outlier_detection.ipynb  iterative_outlier_detection.py  merge_model_results.py  merge_sensitivity_results.py  model_tools.py  requirements.txt  spectra_first_derivative.py  spectral_regression_modelling.py  stratify_samples.py  test_model.py
caipy/: README.md  pyproject.toml  requirements_to_integrate.txt
caipy/data/: SuperCam_cal_shift-2pix_axis.csv
caipy/src/main/: analyze.py  apply_model.py  globals.py  models.py  parallel.py  prepare.py  script_sequence.py  stratify_samples.py  utilities.py
caipy/tests/: test_parallel.py  test_prepare.py
caipy/tests/temp/: Al2O3_OLS_coefs.csv  Al2O3_OLS_coefs_plot.eps  Al2O3_OLS_model.asc  Al2O3_OLS_test_pred_true_plot.eps  Al2O3_OLS_train_pred_true.csv  Al2O3_OLS_train_pred_true_plot.eps  Al2O3_PCR-lin_train_pred_true_plot.eps  Al2O3_PLS_coefs_plot.eps  Al2O3_PLS_model.asc  Al2O3_PLS_train_pred_true_plot.eps  SiO2_OLS_coefs.csv  SiO2_OLS_coefs_plot.eps  SiO2_OLS_model.asc  SiO2_OLS_test_pred_true_plot.eps  SiO2_OLS_train_pred_true.csv  SiO2_OLS_train_pred_true_plot.eps  SiO2_PCR-lin_train_pred_true_plot.eps  SiO2_PLS_coefs_plot.eps  SiO2_PLS_model.asc  SiO2_PLS_train_pred_true.csv  SiO2_PLS_train_pred_true_plot.eps  TiO2_OLS_coefs.csv  TiO2_OLS_coefs_plot.eps  TiO2_OLS_model.asc  (+13 more)
(+164 files in other folders)
